# syncon

./: .gitignore  Makefile  README.md  doc.md  implementation.cabal  stack.yaml  syncon-mode.el  testcorefile
app/: Main.hs
languages/: benchout  benchout2  core  test.fish
languages/formalization-example/: core  file  language
languages/lua/: big_fragment.lua  fake-prelude  fib.lua  file  fizzbuzz.lua  fragment  language  language-bad-funccall  man-or-boy.lua  misc.lua
languages/lua-with-match/: file  language
languages/lua-with-patterns/: file  language
languages/ocaml/: fake-prelude  fib.ml  file  fizzbuzz.ml  language  language-statement  misc.ml  real-prelude  test_coverage.txt
pandoc-doc/: README.md  doc.md  graphviz.py
paper/: .gitignore  .latexmkrc  All.bib  circuits.pptx  esop2020rebuttal.txt  paper.tex  popl2020rebuttal.txt  rebuttal.txt  study.md  supplementary.tex
paper/case-studies/: gt.orc  orc.syncon  orc_compound.syncon  orc_disamb.syncon  orc_gt.syncon  orc_seqlang.syncon  resolvable.orc  resolvable_fix1.orc  resolvable_fix2.orc  test.orc  unresolvable.orc
paper/random-composition/: base.syncon  test-file
paper/random-composition/fragments/haskell/: arithmetic_sections.syncon  arithmetic_sequence.syncon  as_pat.syncon  base.syncon  boolean_guard.syncon  case.syncon  con_pat.syncon  data_decl.syncon  do.syncon  do_bind.syncon  fun_app.syncon  fun_type.syncon  fun_type_constructor.syncon  if.syncon  lambda.syncon  lazy_pat.syncon  let_guard.syncon  list.syncon  list_comprehension.syncon  list_pat.syncon  list_type.syncon  list_type_constructor.syncon  pat_guard.syncon  record_pat.syncon  record_update.syncon  tup_pat.syncon  tup_type.syncon  tuple.syncon  tuple_constructor.syncon  tuple_type_constructor.syncon  type_application_type.syncon  type_assertion.syncon  type_variable.syncon  unit_type.syncon
paper/random-composition/fragments/inspired/: adts.syncon  arithmetic.syncon  array_comprehension.syncon  arrays.syncon  arrow_functions.syncon  bitwise.syncon  boolean.syncon  comparators.syncon  exp_match.syncon  exp_seq_comp.syncon  exp_structured_control.syncon  gotos.syncon  pattern_guards.syncon  records.syncon  regular_patterns.syncon  stm_match.syncon  structured_control.syncon  ternary.syncon  type_application_java.syncon
paper/random-composition/fragments/ocaml/: anonymous_type.syncon  array_access.syncon  array_pat.syncon  as_pat.syncon  as_type_var.syncon  begin_end.syncon  cons.syncon  cons_pat.syncon  (+31 more)
paper/random-composition/logs/: 2020-06-30-ambiguity-run.txt
src/: Ambiguity.hs  Binding.hs  BootParser.hs  ConstructionResolution.hs  Experimenting.hs  FullExpander.hs  GrammarGenerator.hs  ImplChecker.hs  Interpreter.hs  Lexer.x  Lib.hs
src/Types/: Ast.hs  Construction.hs  GenSym.hs  Lexer.hs  Paths.hs  ResolvedConstruction.hs  Result.hs
syncon-parser/: .gitignore  README.md  cloc_definitions.txt  stack.yaml  syncon-parser.cabal  syncon-watch.fish  syncon.cabal
syncon-parser/bench/: Main.hs
syncon-parser/bench/languages/ambig/: ambig.syncon  big_ambig.test
syncon-parser/bench/languages/ocaml/: fizzbuzz.ml
syncon-parser/case-studies/: errors.ml  fizzbuzz.ml  javascript.syncon  ocaml.syncon
syncon-parser/case-studies/ocaml/: graph_example.ml  inside_out.ml  msg.ml  ocaml_actions.ml  privrowsabate_ok.ml  source-short.ml  tformat.ml
syncon-parser/demo/: Makefile  demo.source  demo.syncon  lang.synconc  readme.md  script.txt
syncon-parser/earley-forest/: CHANGELOG.md  earley-forest.cabal
syncon-parser/earley-forest/src/Text/Earley/Forest/: Grammar.hs  ParseTree.hs  Parser.hs  SplitEpsDFA.hs  Transformations.hs
syncon-parser/examples/: ambig.syncon  ambig.test  ambig_match.ml  ast-lang-fail.syncon  ast-lang-fail.test  bootstrap.syncon  bootstrap_regex.syncon  broken.syncon  fizzbuzz.ml  new.syncon  new.test  new_style.syncon  ocaml.syncon  reparse-failure.syncon  simple.syncon  simple.test  split.test  split1.syncon  split2.syncon  test.syncon
syncon-parser/exe/: HedgehogExtra.hs  Main.hs  RandomCompose.hs
syncon-parser/gll/: LICENSE  changelog.txt  gll.cabal
syncon-parser/gll/src/GLL/: Combinators.hs  Flags.hs  Parser.hs
syncon-parser/gll/src/GLL/Combinators/: BinaryInterface.hs  Interface.hs  Lexer.hs  Memoisation.hs  Options.hs
syncon-parser/gll/src/GLL/Combinators/Test/: BinaryInterface.hs  Interface.hs
syncon-parser/gll/src/GLL/Combinators/Visit/: Grammar.hs  Join.hs  Sem.hs
syncon-parser/gll/src/GLL/Parseable/: Char.hs
syncon-parser/gll/src/GLL/Types/: Derivations.hs  Grammar.hs
syncon-parser/languages/ambig/: ambig.test  big_ambig.test
syncon-parser/languages/lispy/: lispy.syncon  lispy.test
syncon-parser/languages/mcore/: effects.mc  fix.mc  match.mc  mcore.syncon
syncon-parser/languages/ocaml/: a_ustring.ml  ustring.ml
syncon-parser/languages/simple-right-recursion/: def.syncon  test.test
syncon-parser/languages/syncon/: bootstrap
syncon-parser/languages/trivial/: atest.syncon
syncon-parser/resources/: htmlTemplate.html
syncon-parser/src/: ErrorMessage.hs  FileAnnotation.hs  Main.hs  Pre.hs  Result.hs  Util.hs
syncon-parser/src/Data/: Automaton.hs
syncon-parser/src/Data/Automaton/: DFA.hs  DVA.hs  EpsilonNFA.hs  EpsilonNVA.hs  GraphViz.hs  NFA.hs  NVA.hs  Regex.hs
syncon-parser/src/P1Lexing/: Lexer.hs  Types.hs
syncon-parser/src/P2LanguageDefinition/: BasicChecker.hs  Elaborator.hs  Parser.hs  Types.hs
syncon-parser/src/P4Parsing/: AmbiguityReporter.hs  ForestParser.hs  GLL.hs  Generator.hs  Parser.hs  Parser2.hs  Types.hs
syncon-parser/src/P4Parsing/ForestParser/: GLL.hs  Grammar.hs
syncon-parser/src/P5DynamicAmbiguity/: AmbiguityReporter.hs  AmbiguityReporter2.hs  Analysis.hs  Isolation.hs  PatchTokenStream.hs  TreeLanguage.hs  Types.hs
syncon-parser/src/P6Output/: JsonV1.hs
syncon-parser/test/: AutomataTest.hs  Main.hs  ParseTest.hs
vpl-ambiguity/: .gitignore  vpl-ambiguity.cabal
vpl-ambiguity/src/: Automaton.hs  GraphViz.hs  Main.hs  ParenAutomaton.hs  Regex.hs  Util.hs
vpl-ambiguity/src/Automaton/: DFA.hs  DVA.hs  EpsilonNFA.hs  NFA.hs  NVA.hs
(+93 files in other folders)
