name:                implementation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/implementation#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lexer
                     , Types.Lexer
                     , BootParser
                     , Types.Construction
                     , GrammarGenerator
                     , Types.Ast
                     , Ambiguity
                     , ConstructionResolution
                     , ImplChecker
                     , Binding
                     , Types.ResolvedConstruction
                     , Types.Paths
                     , Types.Result
                     , Types.GenSym
                     , FullExpander
                     , Interpreter
                     , Experimenting
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers >= 0.5.8.0
                     , pretty
                     , mtl
                     , tardis
                     , Earley
                     , deepseq
                     , time
                     , uniplate
-- deepseq is experimenting only
  build-tools:         alex
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
                     , LambdaCase
                     , BangPatterns
                     , TupleSections
                     , DuplicateRecordFields
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , TypeSynonymInstances
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , DeriveDataTypeable
                     , DeriveGeneric
                     , ScopedTypeVariables
  ghc-options:
    -fwarn-tabs
    -fwarn-unused-imports
    -fwarn-incomplete-patterns
    -fwarn-overlapping-patterns
    -fwarn-incomplete-record-updates
    -fwarn-missing-signatures
    -fwarn-orphans

executable implementation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , implementation
  default-language:    Haskell2010
  default-extensions:  LambdaCase

test-suite implementation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , implementation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/implementation
