name: syncon-parser
version: 0.1.0.0
author: Viktor Palmkvist
maintainer: vipa@kth.se
copyright: 2019 Viktor Palmkvist
build-type: Simple
cabal-version: >=2

executable syncon-parser
  hs-source-dirs: src
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends: base
               , protolude
               , text
               , hashable
               , unordered-containers
               , containers
               , array
               , recursion-schemes
               , bytestring
               , utf8-string
               , regex-pcre-builtin
               , pretty-show
               , pretty-terminal
               , uniplate
               , Earley
  main-is: Main.hs
  other-modules: Pre
               , Result
               , FileAnnotation
               , ErrorMessage
               , P1Lexing.Types
               , P1Lexing.Lexer
               , P2LanguageDefinition.Types
               , P2LanguageDefinition.Parser
               , P2LanguageDefinition.BasicChecker
               , P2LanguageDefinition.Elaborator
               , P4Parsing.Types
               , P4Parsing.Parser
               , P4Parsing.AmbiguityReporter
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , InstanceSigs
                    , MultiParamTypeClasses
                    , LambdaCase
                    , MultiWayIf
                    , NamedFieldPuns
                    , TupleSections
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DeriveDataTypeable
                    , GeneralizedNewtypeDeriving
                    , DerivingVia
                    , StandaloneDeriving
                    , BangPatterns
                    , KindSignatures
                    , TypeOperators
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , ApplicativeDo
                    , DefaultSignatures
                    , ExistentialQuantification
                    , FunctionalDependencies
                    , GADTs
                    , DataKinds
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , PatternSynonyms
