name: syncon
version: 0.1.0.0
author: Viktor Palmkvist
maintainer: vipa@kth.se
copyright: 2019 Viktor Palmkvist
build-type: Simple
cabal-version: >=2

executable syncon-parser
  hs-source-dirs: exe
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -funbox-strict-fields
  build-depends: base
               , syncon
               , optparse-applicative
               , pretty-show
               , uniplate
               , recursion-schemes
               , bytestring
               , file-embed
               , containers
               , unordered-containers
               , directory
               , filepath
               , text
               , serialise
  default-extensions: NoImplicitPrelude
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , InstanceSigs
                    , MultiParamTypeClasses
                    , LambdaCase
                    , MultiWayIf
                    , NamedFieldPuns
                    , TupleSections
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DeriveDataTypeable
                    , GeneralizedNewtypeDeriving
                    , StandaloneDeriving
                    , BangPatterns
                    , KindSignatures
                    , TypeOperators
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , ApplicativeDo
                    , DefaultSignatures
                    , ExistentialQuantification
                    , FunctionalDependencies
                    , GADTs
                    , DataKinds
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , PatternSynonyms
                    , NumericUnderscores

library
  hs-source-dirs: src
  ghc-options: -Wall -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  build-depends: base
               , protolude
               , text
               , hashable
               , unordered-containers
               , these
               , containers
               , vector
               , array
               , recursion-schemes
               , uniplate
               , bytestring
               , pretty-show
               , utf8-string
               , regex-pcre-builtin
               , pretty-terminal
               , Earley
               , earley-forest
               , aeson
               , serialise
  exposed-modules: Pre
                 , Result
                 , Util
                 , FileAnnotation
                 , ErrorMessage
                 , Data.Automaton
                 , Data.Automaton.EpsilonNFA
                 , Data.Automaton.NFA
                 , Data.Automaton.DFA
                 , Data.Automaton.EpsilonNVA
                 , Data.Automaton.NVA
                 , Data.Automaton.DVA
                 , Data.Automaton.Regex
                 , Data.Automaton.GraphViz
                 , P1Lexing.Types
                 , P1Lexing.Lexer
                 , P2LanguageDefinition.Types
                 , P2LanguageDefinition.Parser
                 , P2LanguageDefinition.BasicChecker
                 , P2LanguageDefinition.Elaborator
                 , P4Parsing.Types
                 , P4Parsing.Parser
                 , P5DynamicAmbiguity.Types
                 , P5DynamicAmbiguity.TreeLanguage
                 , P5DynamicAmbiguity.Analysis
                 , P5DynamicAmbiguity.Isolation
                 , P6Output.JsonV1
  default-language: Haskell2010
  default-extensions: NoImplicitPrelude
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , InstanceSigs
                    , MultiParamTypeClasses
                    , LambdaCase
                    , MultiWayIf
                    , NamedFieldPuns
                    , TupleSections
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DeriveDataTypeable
                    , GeneralizedNewtypeDeriving
                    , StandaloneDeriving
                    , BangPatterns
                    , KindSignatures
                    , TypeOperators
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , ApplicativeDo
                    , DefaultSignatures
                    , ExistentialQuantification
                    , FunctionalDependencies
                    , GADTs
                    , DataKinds
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , PatternSynonyms
                    , NumericUnderscores

benchmark syncon-parser-bench
  hs-source-dirs: bench
  build-depends: syncon
               , base
               , criterion
               , unordered-containers
               , filepath
               , directory
  main-is: Main.hs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions: NoImplicitPrelude
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , InstanceSigs
                    , MultiParamTypeClasses
                    , LambdaCase
                    , MultiWayIf
                    , NamedFieldPuns
                    , TupleSections
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DeriveDataTypeable
                    , GeneralizedNewtypeDeriving
                    , StandaloneDeriving
                    , BangPatterns
                    , KindSignatures
                    , TypeOperators
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , ApplicativeDo
                    , DefaultSignatures
                    , ExistentialQuantification
                    , FunctionalDependencies
                    , GADTs
                    , DataKinds
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , PatternSynonyms
                    , NumericUnderscores

test-suite syncon-parser-test
  hs-source-dirs: test
  build-depends: syncon
               , base
               , unordered-containers
               , filepath
               , directory
  main-is: Main.hs
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints
  default-extensions: NoImplicitPrelude
                    , EmptyCase
                    , FlexibleContexts
                    , FlexibleInstances
                    , InstanceSigs
                    , MultiParamTypeClasses
                    , LambdaCase
                    , MultiWayIf
                    , NamedFieldPuns
                    , TupleSections
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveLift
                    , DeriveTraversable
                    , DeriveDataTypeable
                    , GeneralizedNewtypeDeriving
                    , StandaloneDeriving
                    , BangPatterns
                    , KindSignatures
                    , TypeOperators
                    , OverloadedStrings
                    , ScopedTypeVariables
                    , TypeApplications
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , ApplicativeDo
                    , DefaultSignatures
                    , ExistentialQuantification
                    , FunctionalDependencies
                    , GADTs
                    , DataKinds
                    , TypeFamilies
                    , TypeFamilyDependencies
                    , PatternSynonyms
                    , NumericUnderscores
